--- a/tictactoe.html
+++ b/tictactoe.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <button class="btn-restart">Restart!</button>
+    <button class="btn-restart" onclick="resetGame()">Restart!</button>
 
     <h1 class="title">Tic Tac Toe</h1>
 
